crates/vize_glyph/src/snapshots/vize_glyph__tests__allocator_reuse-2.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result2.code.as_str()
---
<script>
const b = 2;
</script>
