crates/vize_glyph/src/snapshots/vize_glyph__tests__allocator_reuse.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result1.code.as_str()
---
<script>
const a = 1;
</script>
