crates/vize_glyph/src/snapshots/vize_glyph__tests__format_script_only.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result.as_str()
---
const x = 1;
const y = { a: 1, b: 2 };
