crates/vize_glyph/src/snapshots/vize_glyph__tests__format_sfc_jsx_script_block.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result.code.as_str()
---
<script lang="jsx">
export default function App() {
  return (
    <>
      <button onClick={() => emit("save")}>Save</button>
    </>
  );
}
</script>
