crates/vize_glyph/src/snapshots/vize_glyph__tests__format_sfc_preserves_block_attrs.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result.code.as_str()
---
<script setup lang="ts" generic="T extends string">
const msg = "hello";
</script>

<template functional>
  <div>{{ msg }}</div>
</template>

<style scoped lang="scss" module>
.container { color: red; }
</style>

<i18n global locale="en">
{"hello":"Hello"}
</i18n>
