crates/vize_glyph/src/snapshots/vize_glyph__tests__format_sfc_preserves_leading_comment.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result.code.as_str()
---
<!--
SPDX-FileCopyrightText: Example Author
SPDX-License-Identifier: MIT
-->

<script setup lang="ts">
const message = "hello";
</script>

<template>
  <div>Hello</div>
</template>
