crates/vize_glyph/src/snapshots/vize_glyph__tests__format_sfc_preserves_structure.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result.code.as_str()
---
<script setup lang="ts">
const msg = "hello";
</script>

<template>
  <div>{{ msg }}</div>
</template>

<style scoped>
.container {
  color: red;
}
</style>
