crates/vize_glyph/src/snapshots/vize_glyph__tests__format_sfc_tsx_script_block.snap
---
source: crates/vize_glyph/src/lib.rs
expression: result.code.as_str()
---
<script setup lang="tsx">
const Card = (props: { title: string; items: string[] }) => (
  <section class="card">
    <h2>{props.title}</h2>
    {props.items.map((item) => (
      <span key={item}>{item}</span>
    ))}
  </section>
);
</script>

<template>
  <Card title="Docs" :items="['a']" />
</template>
